Making the docs and example better.  Added method for adding test to window so it'll be easy for optimizely to do its bullshit.

--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -1,3 +1,3 @@
-<div ng-controller="experimentController" ng-init="load(name)" ng-show="canShow(variant)">
+<div ng-controller="ExperimentController" ng-init="load(name)" ng-show="canShow(variant)">
 	<div ng-transclude></div>
 </div>
